--- a/package.json
+++ b/package.json
@@ -9,8 +9,12 @@
   },
   "dependencies": {
     "core-js": "^3.6.5",
+    "moment": "^2.29.1",
+    "sass-loader": "^10.1.1",
+    "v-tooltip": "^2.1.2",
     "vue": "^2.6.11",
-    "vue-slider-component": "^3.2.11"
+    "vue-slider-component": "^3.2.11",
+    "vue-table-component": "^1.9.2"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
